# UselessPope-NUCLEO-Board

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.bat
NUCLEO-H753ZI-FlashTest-sim/: .gitignore  Makefile.am  NUCLEO-H753ZI-FlashTest-sim.sln  NUCLEO-H753ZI-FlashTest-sim.vcxproj  NUCLEO-H753ZI-FlashTest-sim.vcxproj.filters  reconfigure.sh
NUCLEO-H753ZI-FlashTest-sim/bsp/src/: sim_analog_value_publisher.cpp  sim_bsp_led.cpp  sim_bsp_uart_usb.cpp  sim_internal_fs.cpp
NUCLEO-H753ZI-FlashTest-sim/libco/: libco.h  x86.c
NUCLEO-H753ZI-FlashTest-sim/os/inc/: os.hpp
NUCLEO-H753ZI-FlashTest-sim/os/src/: sim_os.cpp
NUCLEO-H753ZI-FlashTest-sim/win-iconv/: readme.txt
NUCLEO-H753ZI-FlashTest/app/: CMakeLists.txt
NUCLEO-H753ZI-FlashTest/app/src/: AnalogValueLogger.cpp  AnalogValueLogger.hpp  AnalogValueLoggerAdc3.cpp  AnalogValueLoggerAdc3.hpp  AtomicPointer.hpp  BaseModule.hpp  CppUtilsUartDebug.cpp  CppUtilsUartDebug.hpp  LastStateInfo.hpp  LockedDebugStream.cpp  LockedDebugStream.hpp  main.cpp  sdk_stub.c  task_status_led.cpp  task_status_led.h
NUCLEO-H753ZI-FlashTest/bsp/: CMakeLists.txt
NUCLEO-H753ZI-FlashTest/bsp/LinkerScripts/: STM32H753ZI_flash.lds
NUCLEO-H753ZI-FlashTest/bsp/STM32H7xx_HAL_Driver/: CMakeLists.txt  stm32h7xx_hal_conf.h
NUCLEO-H753ZI-FlashTest/bsp/inc/: bsp.hpp  bsp_adc.hpp  bsp_dma.hpp  bsp_internal_fs.hpp  bsp_resource.hpp  bsp_uart_usb.hpp  stm32h753_flash_config.h
NUCLEO-H753ZI-FlashTest/bsp/src/: bsp.cpp  bsp_adc.cpp  bsp_dma.cpp  bsp_internal_fs.cpp  bsp_uart_usb_hal.cpp  hardfault_handler.cpp  startup_stm32h753xx.c  system_stm32h7xx.cpp
NUCLEO-H753ZI-FlashTest/bsp/stm32_internal_flash/: COPYING.exception
SerialCommandParser/: CMakeLists.txt  README.md
SerialCommandParser/inc/: serial_command_parser.hpp
SerialCommandParser/src/: serial_command_parser.cpp
bslib/: CMakeLists.txt  README.md
bslib/Container/: CMakeLists.txt
bslib/Container/inc/: bslib-Container.hpp  bslib-MPSC.hpp  bslib-SPSC.hpp
bslib/Container/src/: bslib-Container.cpp
bslib/H753_internal_flash_update_memory/: CMakeLists.txt
bslib/H753_internal_flash_update_memory/inc/: bslib-h753_internal_flash_update_memory.hpp
bslib/H753_internal_flash_update_memory/src/: bslib-h753_internal_flash_update_memory.cpp
bslib/LED/: CMakeLists.txt  README.md
bslib/LED/inc/: bslib-LED.hpp
bslib/LED/src/: bslib-LED.cpp
bslib/Provider/: CMakeLists.txt  README.md
bslib/Provider/inc/: bslib-Provider.hpp
bslib/Provider/src/: bslib-Provider.cpp
bslib/Publisher/: CMakeLists.txt
bslib/Publisher/inc/: bslib-LF_publisher.hpp  bslib-Publisher.hpp  bslib-SPSC_subscriber.hpp
bslib/Publisher/src/: bslib-Publisher.cpp
bslib/Utility_Interfaces/: CMakeLists.txt
bslib/Utility_Interfaces/inc/: bslib-utility_Interfaces.hpp
bslib/Utility_Interfaces/src/: bslib-utility_Interfaces.cpp
bslib/inc/: bslib.hpp
bslib/src/: bslib.cpp
cpputils/: CMakeLists.txt  tools_config.h
ex-math/: CMakeLists.txt  README.md
ex-math/blas/: CMakeLists.txt
ex-math/blas/inc/: exmath-blas.hpp
ex-math/constants/: CMakeLists.txt
ex-math/constants/inc/: exmath-constants.hpp
ex-math/constants/src/: exmath-constants.cpp
ex-math/inc/: exmath.hpp
ex-math/intervals/: CMakeLists.txt
ex-math/intervals/inc/: exmath-intervals.hpp
ex-math/intervals/src/: exmath-intervals.cpp
ex-math/polynominal/: CMakeLists.txt  README.md
ex-math/polynominal/inc/: exmath-polynominal.hpp
ex-math/polynominal/src/: exmath-polynominal.cpp
ex-math/src/: exmath.cpp
ex-math/statistics/: CMakeLists.txt
ex-math/statistics/inc/: exmath-statistics.hpp
ex-math/statistics/src/: exmath-statistics.cpp
os/: CMakeLists.txt
os/cfg/: FreeRTOSConfig.h
os/freertos/: CMakeLists.txt
os/inc/: os.hpp
os/inc_FreeRTOS/: wlib_OS.hpp
os/src/: os.cpp  retarget_malloc.cpp  retarget_malloc.hpp  start_runtime.cpp
pc_os/: CMakeLists.txt
pc_os/inc/: os.hpp
pc_os/src/: os.cpp  start_runtime.cpp
sensors/: CMakeLists.txt
sensors/CPU_Temperature/: CMakeLists.txt  README.md
sensors/CPU_Temperature/inc/: sensors-CPU_Temperature.hpp
sensors/CPU_Temperature/src/: sensors-CPU_Temperature.cpp
sensors/NTC_Temperature/: CMakeLists.txt  README.md
sensors/NTC_Temperature/inc/: sensors-TDK_NTC.hpp
sensors/NTC_Temperature/src/: sensors-TDK_NTC.cpp
sensors/inc/: sensors.hpp
sensors/src/: sensors.cpp
simpleflashfs/: CMakeLists.txt
uc-lib/: CMakeLists.txt
uc-lib/STM32H753xx/: CMakeLists.txt
uc-lib/STM32H753xx/inc/: uC_ADC.hpp  uC_DAC.hpp  uC_DMA.hpp  uC_Errors.hpp  uC_FDCAN.hpp  uC_GPIO.hpp  uC_HR_TIMER_F_Measurement.hpp  uC_HW_Handles.hpp  uC_HW_Manager.hpp  uC_HW_Units.hpp  uC_IRQ_Manager.hpp  uC_Register.hpp  uC_SPI.hpp  uC_Timer.hpp  uC_UART.hpp
uc-lib/STM32H753xx/src/: uC_ADC.cpp  uC_DAC.cpp  uC_DMA.cpp  uC_Errors.cpp  uC_GPIO.cpp  uC_HR_TIMER_F_Measurement.cpp  uC_HW_HANDLEs.cpp  uC_HW_Manager.cpp  uC_HW_Units.cpp  uC_IRQ_Manager.cpp  uC_Register.cpp  uC_SPI.cpp  uC_Timer.cpp
uc-lib/inc/: uC.hpp
uc-lib/src/: uC.cpp
wlib/: CMakeLists.txt  README.md
wlib/BLOB/: CMakeLists.txt  README.md
wlib/BLOB/inc/: wlib-BLOB.hpp
wlib/BLOB/src/: wlib-BLOB.cpp
wlib/CRC/: CMakeLists.txt
wlib/CRC/inc/: wlib-CRC.hpp  wlib-CRC_16_ccitt.hpp  wlib-CRC_32.hpp  wlib-CRC_64_go_iso.hpp  wlib-CRC_8.hpp  wlib-CRC_Interface.hpp
wlib/CRC/src/: wlib-CRC.cpp  wlib-CRC_16_ccitt.cpp  wlib-CRC_32.cpp  wlib-CRC_64_go_iso.cpp  wlib-CRC_8.cpp
wlib/Callback/: CMakeLists.txt
wlib/Callback/inc/: wlib-Callback.hpp
wlib/Callback/src/: wlib-Callback.cpp
wlib/Container/: CMakeLists.txt
wlib/Container/inc/: wlib-Container.hpp
wlib/Container/src/: wlib-Container.cpp
wlib/HASH/: CMakeLists.txt
wlib/HASH/inc/: wlib-HASH.hpp
wlib/HASH/src/: wlib-HASH.cpp
wlib/IO/: CMakeLists.txt  README.md
wlib/IO/inc/: wlib-io.hpp
wlib/Memory/: CMakeLists.txt
wlib/Provider/: CMakeLists.txt  README.md
wlib/Publisher/: CMakeLists.txt
wlib/SPI_Abstraction/: CMakeLists.txt
wlib/Storage/: CMakeLists.txt
wlib/StringSink/: CMakeLists.txt  README.md
wlib/inc/: wlib.hpp
wlib/src/: wlib.cpp
(+41 files in other folders)
